--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=
+spring.data.mongodb.password=
+spring.data.mongodb.database=Contact_db
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+
+
+contact.app.jwtSecret=
+contact.app.jwtExpirationMs= 86400000
