--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=
-spring.data.mongodb.password=
+spring.data.mongodb.username=burane
+spring.data.mongodb.password=Toshiba07
 spring.data.mongodb.database=Contact_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
