--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 
 spring.data.mongodb.authentication-database=admin
-spring.data.mongodb.username=burane
-spring.data.mongodb.password=Toshiba07
+spring.data.mongodb.username=
+spring.data.mongodb.password=
 spring.data.mongodb.database=Contact_db
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation= true
 
 
 contact.app.jwtSecret=
