--- a/svelte/contact-app/package.json
+++ b/svelte/contact-app/package.json
@@ -26,5 +26,8 @@
     "tslib": "^2.0.0",
     "typescript": "^4.3.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "cerialize": "^0.1.18"
+  }
 }
