--- a/svelte/contact-app/package.json
+++ b/svelte/contact-app/package.json
@@ -28,6 +28,7 @@
   },
   "type": "module",
   "dependencies": {
-    "cerialize": "^0.1.18"
+    "cerialize": "^0.1.18",
+    "svelte-session-manager": "^1.4.4"
   }
 }
